--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
     "fetch-jsonp": "^1.0.0",
+    "lodash": "^4.17.4",
     "moment": "^2.13.0",
     "node-sass": "^4.5.3",
     "react": "^15.0.2",
